--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.1",
+    "@stripe/stripe-js": "^1.46.0",
     "add": "^2.0.6",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
@@ -18,6 +20,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
