--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/react-stripe-js": "^1.16.1",
     "@stripe/stripe-js": "^1.46.0",
     "add": "^2.0.6",
+    "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
+    "stripe": "^11.3.0",
     "styled-components": "^5.3.6",
     "vite-plugin-svgr": "^2.2.2"
   },
